--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>41ZONE</title>
+    <title>41ZONE to GITHUB</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/41zone">View on GitHub</a>
 
-          <h1 id="project_title"><img src="/images/logo2.png" border="0"/></h1>
+          <h1 id="project_title"></h1>
           <h2 id="project_tagline"></h2>
 
         </header>
